[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/UpgradeCardsHandler.gd" type="Script" id=1]
[ext_resource path="res://Assets/Other/icon.png" type="Texture" id=2]
[ext_resource path="res://Assets/Other/Card.png" type="Texture" id=3]
[ext_resource path="res://SFX/MX Button Click.mp3" type="AudioStream" id=4]
[ext_resource path="res://SFX/MX Button Hover.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/BINGO.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://BINGO.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 6 )

[node name="Upgrade_1" type="TextureButton"]
margin_left = 297.0
margin_top = 189.0
margin_right = 797.0
margin_bottom = 889.0
rect_scale = Vector2( 0.47524, 0.486914 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Description" type="RichTextLabel" parent="."]
margin_left = 75.7512
margin_top = 441.556
margin_right = 421.751
margin_bottom = 587.556
custom_fonts/normal_font = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Name" type="RichTextLabel" parent="."]
margin_left = 86.2722
margin_top = 381.998
margin_right = 416.272
margin_bottom = 448.998
custom_fonts/normal_font = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 250.23, 193.34 )
texture = ExtResource( 2 )

[node name="PressedSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 7.704
pitch_scale = 1.27

[node name="HoveredSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 2.139
pitch_scale = 1.3

[connection signal="mouse_entered" from="." to="." method="_on_Upgrade_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Upgrade_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Upgrade_pressed"]
